# TaskManagerAPI

./: .gitignore  .pre-commit-config.yaml  README.md  apispec_docs.py  app.py  middleware.py  pyproject.toml  schemas.py
config/: cfg.py
database/: crud.py  engine.py  models.py
routers/: create_task.py  delete_tasks.py  get_tasks.py  get_tasksID.py  update_tasks.py
tests/: conftest.py  test.py  test_requests.py
